welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:6: error: not found: value Direction
  while (!( (getDirection() == Direction.EAST) && estFaceMur() ) ) {
                               ^